[package]
name = "shadertoy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
vulkano = "0.33.0"
vulkano-shaders = "0.33.0"
watchexec = "2.3.0"
winit = "0.28.6"

